# SolarSystemSim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_windows_mingw.bat
docs/: shader1.vshader
shaders/: orbit.fshader  orbit.vshader  sun.fshader  sun.vshader  terrestrial.fshader  terrestrial.vshader
src/: CMakeLists.txt  CelestialBody.h  Satellite.cpp  Satellite.h  SolarSystem.cpp  SolarSystem.h  Sun.cpp  Sun.h  Terrestrial.cpp  Terrestrial.h  main.cpp
